db-cluster/users/k8s-cluster2/ns-pengseangsim210-gmail-com-9d7d574c/seang1/ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: seang1-tcp
  namespace: ns-pengseangsim210-gmail-com-9d7d574c
spec:
  entryPoints:
  - redis
  routes:
  - match: HostSNI(`seang1-redis-leader-0.seang.shop`)
    services:
    - name: seang1-redis-leader-0
      port: 6379
  - match: HostSNI(`seang1-redis-leader-1.seang.shop`)
    services:
    - name: seang1-redis-leader-1
      port: 6379
  - match: HostSNI(`seang1-redis-leader-2.seang.shop`)
    services:
    - name: seang1-redis-leader-2
      port: 6379
  tls:
    passthrough: true
